Improve code gen

--- a/aoc-scripts/envs/template.env
+++ b/aoc-scripts/envs/template.env
@@ -29,3 +29,9 @@ export AOC_DAY_PREFIX=d
 export AOC_INPUT_FILE=input.txt
 export AOC_EXAMPLE_FILE=example.txt
 export AOC_INSTALL_DIR=/usr/local/bin/
+
+############
+# CODE GEN #
+############
+export AOC_SRC_CODE_GEN_FILE="$AOC_INSTALL_DIR/aoc-scripts/skeleton-code/java/src.java"
+export AOC_TEST_CODE_GEN_FILE="$AOC_INSTALL_DIR/aoc-scripts/skeleton-code/java/test.java"
