--- a/aoc-scripts/envs/java-template.env
+++ b/aoc-scripts/envs/java-template.env
@@ -35,3 +35,4 @@ export AOC_INSTALL_DIR=/usr/local/bin/
 ############
 export AOC_SRC_CODE_GEN_FILE="$AOC_INSTALL_DIR/aoc-scripts/skeleton-code/java/src.java"
 export AOC_TEST_CODE_GEN_FILE="$AOC_INSTALL_DIR/aoc-scripts/skeleton-code/java/test.java"
+export AOC_LANGUAGE=java
